# lost-thoughts-ui

./: Cargo.toml  master
.github/workflows/: docker.yml  main_checker.yml  tags_checker.yml
src/: main.rs
src/api/: comment.rs  errors.rs  mod.rs  post.rs  role.rs  user.rs  usermin.rs
src/app/: initializate.rs  messages.rs  mod.rs  model.rs
src/test/: api.rs
