[package]
name = "lost-thoughts-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["tokio"] }
mockito = "1.2.0"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.23", features = ["serde_json", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-test = "0.4.3"
